--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+git add .
+git status
+git commit -m "Change index.html file"
+git pull --rebase
+git push -->
 <html>
     <head>
         <title>D18 Web</title>
@@ -7,6 +13,7 @@
     </head>
 
     <body>
+        <script src="./script.js"></script>
         <div class="navigation">
             <ul>
                 <li>
