Mô tả ngắn về các thay đổi

--- a/index.html
+++ b/index.html
@@ -1,61 +1,68 @@
-<!--
-git add .
-git status
-git commit -m "Change index.html file"
-git pull --rebase
-git push -->
-<html>
-    <head>
-        <title>D18 Web</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/vaakash/socializer@f4c4e9/css/socializer.min.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    </head>
-
-    <body>
-        <script src="./script.js"></script>
-        <div class="navigation">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <i class="fa-solid fa-house"></i>
-                        </span>
-                        <span class="text">Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <i class="fa-solid fa-user"></i>
-                        <span class="text">Profile</span>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="#">
-                        <span class="icon">
-                            <i class="fa-solid fa-comment"></i>
-                        </span>
-                        <span class="text">Message</span>
-                    </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Merry Christmas</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Màn hình 1 -->
+    <div id="screen1" class="screen active">
+        <h1>Hello Elsa</h1>
+        <p>Giáng sinh vui vẻ</p>        
+        <button class="switch-button" onclick="showScreen('screen2')">Bấm đây để xem tiếp lời bộc bạch của tớ nhé!</button>
+        <img class="gif" alt="gif" src="https://raw.githubusercontent.com/DzarelDeveloper/Img/main/gifyou.webp"> 
+    </div>
+    <!-- Màn hình 2 -->
+    <div id="screen2" class="screen">
+        <h2>Do là tớ mới học nên nó xấu vãi cậu ạ,mong cậu chấp nhận :)) </h2>
+        <h3> Lời đầu tiên xin gửi lời chúc sức khỏe và lời chào trân trọng nhất!<br>
+        Hòa cùng không khí vui mừng ngày thi và ngày Tết sắp tới<br>
+        Tớ muốn gửi lời đến cô gái đang đọc<br>
+        Chúc cậu có một Giáng Sinh Vui Vẻ bên người thân của mình<br>
+        Chúc cậu sớm tìm ra người thương của mình trong mái trường ulis :))<br><br><br>
+                        Giáng Sinh Dáng Xinh!<br>
+       -From Hoàng Tùng Dương  </h3>
         
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <i class="fa-solid fa-camera"></i>
-                        <span class="text">Photo</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <i class="fa-solid fa-gear"></i>
-                        <span class="text">Setting</span>
-                    </a>
-                </li>
-                <div class="indicator"></div>
-            </ul>
-        </div>
-    </body>
+        <button class="switch-buttonn" onclick="showScreen('screen1')">Back</button>
+        <button class="switch-buttonnn" onclick="showScreen('screen3')">Next</button>
+    </div>
+    <!--Màn hình 3-->
+    <div id="screen3" class="screen activee">
+        <h4>Gửi lời xin lỗi đến Elsa ( Not Sa )</h4>
+        <h5>Tôi vẫn không thể tin được ngày ấy<br>
+        Ngày 27/10, Cậu vẫn là một người đặc biệt với tôi <br>
+         nhưng tôi lại quên thực hiện lời hứa,<br>
+          một lời chúc trọn vẹn cho người duy nhất chúc sinh nhật tôi ngày ấy.<br>
+        Mong rằng tôi còn có thể thực hiện lời hứa đó vào lần tới</h5>
+        <h6>À còn một nút ấn ẩn nửa nha, hãy tìm nó:></h6>
+        <button class="switch-buttonnnn" onclick="showScreen('screen2')">Back</button>
+        <button class="Next1">Cái này Unlock vào 27/12</button>
+        <script>
+            const button = document.querySelector('.Next1');
+            button.addEventListener('click', function() {
+                window.location.href = 'indexx.html';
+            });
+        </script>
+        <a href="https://ceand18.github.io/crush/">
+            <button class="rounded-button">Chuyển hướng</button>
+          </a>
+          
+    </div>
+
+    <script>
+        function showScreen(screenId) {
+            // Ẩn tất cả các màn hình
+            const screens = document.querySelectorAll('.screen');
+            screens.forEach(screen => {
+                screen.classList.remove('active');
+            });
+
+            // Hiển thị màn hình được chọn
+            const selectedScreen = document.getElementById(screenId);
+            selectedScreen.classList.add('active');
+        }
+    </script>
+</body>
 </html>
